--- a/project/src/main/resources/templates/login/login.html
+++ b/project/src/main/resources/templates/login/login.html
@@ -65,15 +65,7 @@
         
                         <!-- 버튼 -->
                         <div class="d-grid gap-2">
-                            <button class="btn btn-lg btn-dark w-100 py-2 " type="submit">로그인</button>
-                            <hr>
-                            <div>
-                                <a href="/oauth2/authorization/kakao">
-                                    <img src="img/kakao_login_medium_wide.png"
-                                         alt="카카오 로그인"
-                                         style="cursor: pointer;">
-                                </a>
-                            </div>
+                            <button class="btn btn-lg btn-dark w-100 py-2 mb-3" type="submit">로그인</button>
                             <div>
                                 <span class="no-count">계정이 없으신가요?</span>
                                 <a href="/join" class="signup-link mb-3">회원가입</a>
