--- a/project/src/main/resources/templates/pet/reservation.html
+++ b/project/src/main/resources/templates/pet/reservation.html
@@ -22,7 +22,7 @@
   
   <!-- 왼쪽: 검색 필터 사이드바 -->
   <aside class="integrated-search-section">
-    <div class="search-title">객실 검색</div>
+    <div class="search-title">맞춤 객실 검색</div>
     
     <div class="search-form-container">
       <!-- 1줄: 체크인 -->
