유튜브 라이브 추가 및 반려견 상태 (관리자 포함) 푸터 변경

--- a/project/src/main/resources/templates/admin/ad_roominsert.html
+++ b/project/src/main/resources/templates/admin/ad_roominsert.html
@@ -32,6 +32,7 @@ body { background-color: #f5f6f7; }
             <a class="nav-link active" href="/admin/service">⚙️ 서비스 및 시설 관리</a>
             <a class="nav-link" href="/admin/trainer">🏇 훈련사 관리</a>
             <a class="nav-link" href="/admin/notice">📝 공지사항</a>
+            <a class="nav-link" th:href="@{/admin/petstatus}">🐾 반려견 상태 관리</a>
         </nav>
     </aside>
 
