--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -26,8 +26,8 @@
             </section>
             
             <section class="footer-section">
-                <p class="footer-title">찾아 오시는길</p>
-                <p>서울 특별시 강남구 테헤란로 123 PETHOUSE 빌딩 5층</p>
+                <p class="footer-title">찾아 오시는길   </p>
+                <a href="https://map.naver.com/p/directions/-/14106470.8171145,4507773.8519413,%EB%8D%94%EC%A1%B0%EC%9D%80%EC%BB%B4%ED%93%A8%ED%84%B0%EC%95%84%EC%B9%B4%EB%8D%B0%EB%AF%B8%ED%95%99%EC%9B%90%20%EC%9D%B8%EC%B2%9C%EC%A0%90,1516930945,PLACE_POI/-/transit?c=14.69,0,0,0,dh" target="_blank">서울 특별시 강남구 테헤란로 123 PETHOUSE 빌딩 5층</a>
             </section>
 
             </div>
