--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   padding-top: 72px;
 }
@@ -31,6 +35,7 @@ header img {
     height: 32px;         
     transform: scale(1.5);
     transform-origin: left center;
+    vertical-align: middle;
 }
 
 /* 메뉴 전체 간격 */
