--- a/project/src/main/resources/templates/admin/ad_main.html
+++ b/project/src/main/resources/templates/admin/ad_main.html
@@ -53,6 +53,7 @@
             <a class="nav-link" th:href="@{/admin/service}">⚙️ 서비스 및 시설 관리</a>
             <a class="nav-link" th:href="@{/admin/trainer}">🏇 훈련사 관리</a>
             <a class="nav-link" th:href="@{/admin/notice}">📝 공지사항</a>
+            <a class="nav-link" th:href="@{/admin/petstatus}">🐾 반려견 상태 관리</a>   <!-- 모든 페이지에 추가 -->
         </nav>
     </aside>
 
